Updating Old File for core commit 62762d6826c291ab2e32d66c4304a66b2c8d1b90

--- a/help/release-notes/2020.md
+++ b/help/release-notes/2020.md
@@ -4,7 +4,7 @@ description: Versionshinweise zu CJA für 2020
 feature: Release Notes
 exl-id: 11a5e26c-8598-4a1b-9b46-ff9cb4a808cc
 source-git-commit: 3435100469b8e5c521d58b4f7ae99ebe53c0a570
-workflow-type: tm+mt
+workflow-type: ht
 source-wordcount: '2210'
 ht-degree: 100%
 
@@ -26,48 +26,48 @@ ht-degree: 100%
 
 ## Oktober 2020 {#1020}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Dokumentation zu Customer Journey Analytics | Oktober 2020 | Die Customer Journey Analytics-Dokumentation wird zu Experience League verschoben. Im Oktober wechseln alle Artikel, Videos, Versionshinweise und Tutorials von ihrem aktuellen Speicherort `experienceleague.adobe.com` zu `experienceleague.adobe.com`. Dieser Schritt stellt sicher, dass alle Lern-, Selbsthilfe-, Aktivierungs- und Community-Inhalte an einem zentralen Ort bereitgestellt werden. Wenn diese Änderung eintritt, müssen Sie nichts unternehmen, da alle Links zu Experience League umgeleitet werden. Wir werden die Versionshinweise aktualisieren, sobald die Umstellung beginnt. |
 | [!UICONTROL Workspace]: Download von 50.000 Objekten für eine einzige Dimension | 17. September 2020 | Sie können 50.000 Elemente für eine Dimension in einer Freiformtabelle herunterladen, wobei Segmente und Filter angewendet werden. Auf diese Weise können Sie auf mehr als 400 Datenzeilen außerhalb von Analysis Workspace zugreifen. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/download-send.html?lang=de) |
 | [!UICONTROL Workspace]: Verbesserungen der [!UICONTROL Linienvisualisierung] | 17. September 2020 | <ul><li>Sie können die X- und Y-Achse jeder [!UICONTROL Linienvisualisierung] ein- oder ausblenden. Dies kann besonders dann hilfreich sein, wenn Ihre [!UICONTROL Linienvisualisierungen] eher kompakt sind.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] eine Mindest- und Höchstwertebeschriftung darstellen, um rasch die Spitzen und Täler in einer Metrik hervorzuheben.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] verschiedene Regressions-Trend-Linien einblenden, um den Daten-Trend leichter erkennbar zu machen. Zu den Optionen gehören [!UICONTROL Linear], [!UICONTROL Logarithmisch], [!UICONTROL Exponentiell], [!UICONTROL Leistung] und [!UICONTROL Quadratisch].</li></ul> [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/visualizations/line.html?lang=de) |
-| Hilfeseite zur Leistung von Analysis Workspace | 22. Oktober 2020 | Auf der Hilfeseite zur Leistung von Analysis Workspace werden die verschiedenen Faktoren, die die Projektleistung beeinflussen, sowie Links zu Optimierungs-Tipps angezeigt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html) |
-| [!UICONTROL Linienvisualisierung]: Option für Trendlinien mit anpassbaren Durchschnittswerten | 8. Oktober 2020 | Die Option für angepasste Durchschnittswerte wurde zu den Einstellungen für Trendlinien in der Linienvisualisierung hinzugefügt. Ein anpassbarer Durchschnittswert berechnet den Mittelwert für einen bestimmten vorherigen Zeitraum und verwendet diesen als Trend-Linien-Datenpunkt. Anschließend erfolgt ein Wechsel zum nächsten Zeitraum. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
+| Hilfeseite zur Leistung von Analysis Workspace | 22. Oktober 2020 | Auf der Hilfeseite zur Leistung von Analysis Workspace werden die verschiedenen Faktoren, die die Projektleistung beeinflussen, sowie Links zu Optimierungs-Tipps angezeigt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/workspace-faq/optimizing-performance.html?lang=de) |
+| [!UICONTROL Linienvisualisierung]: Option für Trendlinien mit anpassbaren Durchschnittswerten | 8. Oktober 2020 | Die Option für angepasste Durchschnittswerte wurde zu den Einstellungen für Trendlinien in der Linienvisualisierung hinzugefügt. Ein anpassbarer Durchschnittswert berechnet den Mittelwert für einen bestimmten vorherigen Zeitraum und verwendet diesen als Trend-Linien-Datenpunkt. Anschließend erfolgt ein Wechsel zum nächsten Zeitraum. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=de) |
 | Einschränkung bei der Aufstockung entfernt | 19. Oktober 2020 | Zuvor konnten Sie beim Erstellen einer Verbindung maximal 2,5 Milliarden Zeilen aufstocken. Wir beseitigen die Einschränkung bei der Aufstockung und erlauben Ihnen eine Aufstockung von bis zu 13 Monaten Daten, unabhängig von der Größe. |
 | Feldbasiertes CJA-Stitching | 30. Oktober 2020 | Das feldbasierte CJA-Stitching ermöglicht es Kunden, einen Adobe Analytics-Ereignis-Datensatz (oder einen anderen) im Adobe Experience Platform Data Lake von einem ID-Namespace zum anderen erneut zu verschlüsseln. Dies bedeutet in der Regel, dass der Ereignis-Datensatz von einer Cookie-basierten ID in eine personenbasierte ID erneut verschlüsselt wird. Auf diese Weise kann der neu verschlüsselte Datensatz mit anderen personenbasierten Daten in einer CJA-Verbindung kombiniert werden, wodurch eine geräteübergreifende/kanalübergreifende Analyse in Analysis Workspace möglich ist. |
 
 ## September 2020 {#0920}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
 | Änderungen an den Berechtigungen für Customer Journey Analytics | 9. September 2020 | CJA behandelt nicht mehr alle Benutzer als Administratoren. Nur Benutzer, die in der [Adobe Admin Console](https://experienceleague.adobe.com/docs/core-services/interface/manage-users-and-products/admin-getting-started.html?lang=de) als Produktadministratoren benannt wurden, können folgende Aktionen durchführen:<ul><li>[!UICONTROL Verbindungen] oder [!UICONTROL Datenansichten] erstellen/aktualisieren/löschen</li><li>Projekte, Filter oder Berechnungsmetriken, die von anderen Benutzern erstellt wurden, aktualisieren/löschen</li><li>Freigeben eines Workspace-Projekts für alle Benutzer</li></ul>[Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-overview/cja-overview.html?lang=de#admin-access-permissions) |
 | Unterstützung der [!UICONTROL Anomalieerkennung] | 10. September 2020 | Mit der [!UICONTROL Anomalieerkennung] können Sie ermitteln, welche statistischen Fluktuationen wichtig sind und welche nicht. Diese Funktion wird jetzt in [!UICONTROL Customer Journey Analytics] unterstützt. |
 | Neue Datumsbereiche in Workspace | 10. September 2020 | Es werden fünf neue Datumsbereiche hinzugefügt, sodass Sie aus Datumsbereichen wählen können, die keine partiellen Tagesdaten von heute enthalten: [!UICONTROL Letzte 7 volle Tage], [!UICONTROL Letzte 14 volle Tage], [!UICONTROL Letzte 30 volle Tage], [!UICONTROL Letzte 60 volle Tage], [!UICONTROL Letzte 90 volle Tage]. |
-| Workspace: Verbesserungen der [!UICONTROL Linienvisualisierung] | 17. September 2020 | <ul><li>Sie können die X- und Y-Achse jeder [!UICONTROL Linienvisualisierung] ein- oder ausblenden. Dies kann besonders dann hilfreich sein, wenn Ihre [!UICONTROL Linienvisualisierungen] eher kompakt sind.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] eine Mindest- und Höchstwertebeschriftung darstellen, um rasch die Spitzen und Täler in einer Metrik hervorzuheben.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] verschiedene Regressions-Trend-Linien einblenden, um den Daten-Trend leichter erkennbar zu machen. Zu den Optionen gehören [!UICONTROL Linear], [!UICONTROL Logarithmisch], [!UICONTROL Exponentiell], [!UICONTROL Leistung] und [!UICONTROL Quadratisch].</li></ul> [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/visualizations/line.html) |
+| Workspace: Verbesserungen der [!UICONTROL Linienvisualisierung] | 17. September 2020 | <ul><li>Sie können die X- und Y-Achse jeder [!UICONTROL Linienvisualisierung] ein- oder ausblenden. Dies kann besonders dann hilfreich sein, wenn Ihre [!UICONTROL Linienvisualisierungen] eher kompakt sind.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] eine Mindest- und Höchstwertebeschriftung darstellen, um rasch die Spitzen und Täler in einer Metrik hervorzuheben.</li><li>Sie können bei jeder [!UICONTROL Linienvisualisierung] verschiedene Regressions-Trend-Linien einblenden, um den Daten-Trend leichter erkennbar zu machen. Zu den Optionen gehören [!UICONTROL Linear], [!UICONTROL Logarithmisch], [!UICONTROL Exponentiell], [!UICONTROL Leistung] und [!UICONTROL Quadratisch].</li></ul> [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/visualizations/line.html?lang=de) |
 
 ## August 2020 {#0820}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | ----------- | ---------- | ----- |
-| Workspace: Verbesserungen bei der Linienvisualisierung | 17. September 2020 | <ul><li>Sie können die X- und Y-Achse jeder Linienvisualisierung ein- oder ausblenden. Dies kann besonders dann hilfreich sein, wenn Ihre Linienvisualisierungen kompakt sind.</li><li>Sie können bei jeder Linienvisualisierung eine Mindest- und Höchstwertebeschriftung darstellen, um rasch die Spitzen und Täler in einer Metrik hervorzuheben.</li><li>Sie können bei jeder Linienvisualisierung verschiedene Regressions-Trendlinien einblenden, um den Datentrend leichter erkennbar zu machen. Zu den Optionen gehören Linear, Logarithmisch, Exponentiell, Leistung und Quadratisch.</li></ul>[Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html) |
+| Workspace: Verbesserungen bei der Linienvisualisierung | 17. September 2020 | <ul><li>Sie können die X- und Y-Achse jeder Linienvisualisierung ein- oder ausblenden. Dies kann besonders dann hilfreich sein, wenn Ihre Linienvisualisierungen kompakt sind.</li><li>Sie können bei jeder Linienvisualisierung eine Mindest- und Höchstwertebeschriftung darstellen, um rasch die Spitzen und Täler in einer Metrik hervorzuheben.</li><li>Sie können bei jeder Linienvisualisierung verschiedene Regressions-Trendlinien einblenden, um den Datentrend leichter erkennbar zu machen. Zu den Optionen gehören Linear, Logarithmisch, Exponentiell, Leistung und Quadratisch.</li></ul>[Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/visualizations/line.html?lang=de) |
 
 ## Juni 2020 {#0620}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | -----------| ---------- |-----|
 | Unterstützung für Objekt-Arrays | 18. Juni 2020 | CJA-Kunden können jetzt Berichte zu Dimensionen und Metriken erstellen, die in Objekt-Arrays in ihren Adobe Experience Platform-Datensatzschemas angezeigt werden. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-usecases/object-arrays.html?lang=de) |
 | Attribution IQ: [!UICONTROL Algorithmische Zuordnung] | 18. Juni 2020 | Das [!UICONTROL algorithmische Zuordnungsmodell] in [!UICONTROL Analysis Workspace] verwendet statistische Verfahren, um die optimale Zuordnung der Gutschrift für die ausgewählte Metrik dynamisch zu bestimmen. Verfügbar für Kunden von Adobe Analytics Ultimate. [Weitere Informationen ...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/attribution/algorithmic.html?lang=de) |
-| Attribution IQ: Benutzerdefinierte Lookback-Fenster | 18. Juni 2020 | Sie können jetzt jedes Zuordnungsmodell in [!UICONTROL Attribution IQ] so konfigurieren, dass Touchpoints von bis zu 90 Tagen vor dem Zeitraum des Berichte einbezogen werden. Diese erhöht in der Regel die Attributionsgenauigkeit bei Ereignissen, die zu Beginn des Reporting-Zeitraums eintreten, indem Interaktionen berücksichtigt werden, die im Vormonat oder in den Vormonaten stattgefunden haben. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/attribution/models.html?lang=de) |
+| Attribution IQ: Benutzerdefinierte Lookback-Fenster | 18. Juni 2020 | Sie können jetzt jedes Zuordnungsmodell in [!UICONTROL Attribution IQ] so konfigurieren, dass Touchpoints von bis zu 90 Tagen vor dem Zeitraum des Berichte einbezogen werden. Dies erhöht in der Regel die Attributionsgenauigkeit bei Ereignissen, die zu Beginn des Reporting-Zeitraums eintreten, indem Interaktionen berücksichtigt werden, die in den Vormonaten stattgefunden haben. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/attribution/models.html?lang=de) |
 | Unterstützung der [!UICONTROL Anomalieerkennung] | 18. Juni 2020 | Die [!UICONTROL Anomalieerkennung] bietet eine statistische Methode, mit der festgestellt wird, wie sich eine bestimmte Metrik in Bezug auf frühere Daten verändert hat. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/virtual-analyst/anomaly-detection/anomaly-detection.html?lang=de) |
 | Projektrollen für freigegebene [!UICONTROL Workspace]-Projekte | 18. Juni 2020 | Beim Freigeben eines [!UICONTROL Workspace]-Projekts können Sie Empfänger nun je nach gewünschter Projekterfahrung in einer der drei Rollen platzieren: „Bearbeiten“, „Duplizieren“ und „Anzeigen“. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/share-projects.html?lang=de) |
 | Schreibgeschützte [!UICONTROL Workspace]-Projekte | 18. Juni 2020 | [!UICONTROL Workspace]-Projekte können für Benutzer auch nur mit _[!UICONTROL Kann anzeigen]_ freigegeben werden. Wenn ein Empfänger mit der Rolle „Anzeigen“ das freigegebene Projekt öffnet, erhält er eine restriktivere Projekterfahrung ohne linke Leiste und mit eingeschränkten Interaktionen.  [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/view-only-projects.html?lang=de) |
-| Möglichkeit zur gemeinsamen Bearbeitung von [!UICONTROL Workspace]-Projekten | 18. Juni 2020 | Empfänger, die der Rolle _[!UICONTROL Kann bearbeiten]_ hinzugefügt wurden, können ein für sie freigegebenes Projekt neu speichern.  [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/share-projects.html) |
+| Möglichkeit zur gemeinsamen Bearbeitung von [!UICONTROL Workspace]-Projekten | 18. Juni 2020 | Empfänger, die der Rolle _[!UICONTROL Kann bearbeiten]_ hinzugefügt wurden, können ein für sie freigegebenes Projekt neu speichern.  [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/curate-share/share-projects.html?lang=de) |
 | Bereich „Quick Insights“ in [!UICONTROL Workspace] | 25. Juni 2020 | Quick Insights bietet Nicht-Analytikern und neuen Benutzern von [!UICONTROL Analysis Workspace] die Möglichkeit, geschäftliche Fragen schnell und einfach zu beantworten. [Weitere Informationen...](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-workspace/panels/quickinsight.html?lang=de) |
 | Seite [!UICONTROL Info zu Workspace] | 18. Juni 2020 | Auf der Seite [!UICONTROL Info zu Workspace] finden Sie Informationen zu Ihrer Analysis Workspace-Umgebung, zu Ihren Adobe Analytics-Administratoren (falls Sie Support benötigen) und eine Möglichkeit, produktinternes Feedback zu geben. Diese Seite finden Sie unter **[!UICONTROL Workspace]** > **[!UICONTROL Hilfe]** > **[!UICONTROL Info zu Workspace]**. |
 
 ## Mai 2020 {#0520}
 
-| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) – geplantes Datum | Beschreibung |
+| Funktion | [Allgemeine Verfügbarkeit](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html?lang=de) – geplantes Datum | Beschreibung |
 | -----------| --------- | ---------- |
 | Bereich [!UICONTROL „Quick Insights“] in [!UICONTROL Arbeitsbereich] | 25. Juni 2020 | [!UICONTROL Quick Insights] bietet Nicht-Analytikern und neuen Benutzern von [!UICONTROL Analysis Workspace] die Möglichkeit, geschäftliche Fragen schnell und einfach zu beantworten. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/panels/quickinsight.html?lang=de) |
 | [!UICONTROL Customer Journey Analytics]: Globale Verfügbarkeit | 21. Mai 2020 | Stellt [!UICONTROL Customer Journey Analytics] für Kunden in EMEA und APAC zur Verfügung. |
