Updated by task 'AutomatedMDTask_1649888370644_TM-MT_1649888384883'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/597b2ce63d28cb0a9de2f41a495a3fef79046a1f

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,10 +3,10 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: 15f9c9cf2e7dc0be15d54ed9fd96dd16c134b3bd
+source-git-commit: 39e7ae1f77e00dfe58c7f9e9711d18a1cd4fc0ac
 workflow-type: tm+mt
-source-wordcount: '304'
-ht-degree: 100%
+source-wordcount: '300'
+ht-degree: 94%
 
 ---
 
@@ -14,9 +14,9 @@ ht-degree: 100%
 
 ## Februar 2022 {#feb2022}
 
-| Funktion | Beschreibung | Geplantes Datum |
+| Funktion | Beschreibung | Zieldatum |
 | ----------- | ---------- | ----- |
-| Vorschaumodus für Mobile Scorecard-Projekte | Starten Sie direkt im Scorecard-Builder eine Vorschau Ihrer Mobile Scorecard, um zu sehen, wie sie in der Mobile App von Analytics-Dashboards aussehen wird. Im Vorschaumodus können Benutzer auf die gleiche Weise mit Filtern und Diagrammen interagieren wie in der Mobile App, sodass sie eine Vorschau des Erlebnisses erhalten, bevor sie die Scorecard speichern und freigeben. Benutzer können im Vorschaumodus auch die Geräteauswahl verwenden, um zu sehen, wie ihre Scorecard auf verschiedenen Geräten aussieht. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html?lang=de#preview) | 16. Februar 2022 |
+| Vorschaumodus für Mobile Scorecard-Projekte | Starten Sie direkt im Scorecard-Builder eine Vorschau Ihrer Mobile Scorecard, um zu sehen, wie sie in der Mobile App von Analytics-Dashboards aussehen wird. Im Vorschaumodus können Benutzer auf die gleiche Weise mit Filtern und Diagrammen interagieren wie in der Mobile App, sodass sie eine Vorschau des Erlebnisses erhalten, bevor sie die Scorecard speichern und freigeben. Benutzer können im Vorschaumodus auch die Geräteauswahl verwenden, um zu sehen, wie ihre Scorecard auf verschiedenen Geräten aussieht. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dashboards/create-scorecard.html#preview) | 16. Februar 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
@@ -26,6 +26,6 @@ ht-degree: 100%
 | ----------- | ---------- | ----- |
 | [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Reports &amp; Analytics als _Merchandising_ bezeichnet. Es wird jetzt in Customer Journey Analytics unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
 | Die Zuordnungsmodelle [!UICONTROL Erster bekannter] und [!UICONTROL Letzter bekannter] | Diese beiden neuen Zuordnungsmodelle nehmen den ersten oder letzten beobachteten Wert für eine Dimension innerhalb eines bestimmten Persistenzbereichs (Sitzung, Person oder benutzerspezifischer Zeitraum mit Rückblick). Anschließend wenden sie das Zuordnungsmodell auf alle Ereignisse im angegebenen Bereich an. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#allocation-settings) | 19. Januar 2022 |
-| [!UICONTROL PersonID] und [!UICONTROL PersonID-Namespace] als Dimensionen | Zeigt die `personID` (oder `customerID` bzw. die ID, die Sie zum Zusammenführen von Datensätzen in einer Verbindung verwenden) als Dimension in Datenansichten. Diese Verbesserung erleichtert Ihnen die Einbeziehung der `personID` als Dimension in Ihrer Datenansicht, indem Sie sie aus der Verbindung heranziehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-reference.html?lang=de#optional-standard-components) | 19. Januar 2022 |
+| [!UICONTROL PersonID] und [!UICONTROL PersonID-Namespace] als Dimensionen | Zeigt die `personID` (oder `customerID` bzw. die ID, die Sie zum Zusammenführen von Datensätzen in einer Verbindung verwenden) als Dimension in Datenansichten. Diese Verbesserung erleichtert Ihnen die Einbeziehung der `personID` als Dimension in Ihrer Datenansicht, indem Sie sie aus der Verbindung heranziehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-reference.html#optional-standard-components) | 19. Januar 2022 |
 
 {style=&quot;table-layout:auto&quot;}
