Updated by task 'AutomatedMDTask_1650123376296_TM-MT_1650123397132'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/a4a1062a9cdc276f263feaee0e9fc03e22a7e1d3

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,14 +3,28 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: 39e7ae1f77e00dfe58c7f9e9711d18a1cd4fc0ac
+source-git-commit: b7a68f7cbcca74c1eaa5f14c4a3aa2652afb248d
 workflow-type: tm+mt
-source-wordcount: '300'
-ht-degree: 94%
+source-wordcount: '463'
+ht-degree: 61%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
+
+## März 2022 {#mar22}
+
+| Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- |
+| Anmerkungen in Workspace | Mit Anmerkungen in Workspace können Sie Ihrer Organisation kontextbezogene Datennuancen und Einblicke effektiv kommunizieren. [Weitere Informationen](/help/components/annotations/overview.md) | allmähliche Einführung beginnt am 23. März 2022 |
+| Landingpage für neue Customer Journey Analytics | Auf der Landingpage für Customer Journey Analytics finden Sie eine Startseite des Projektmanagers und einen Lernabschnitt, der Ihnen bei den ersten Schritten hilft. [Weitere Informationen](/help/getting-started/landing.md) | 1. April 2022 |
+| [!UICONTROL Nächstes Element] oder [!UICONTROL Vorheriges Element] Arbeitsbereich | Die [!UICONTROL Nächstes oder vorheriges Element] -Bedienfeld können Sie Elemente untersuchen, die einem Dimensionselement Ihrer Wahl folgen oder diesem vorausgehen. Verwenden Sie sie beispielsweise, wenn Sie die nächsten oder vorherigen Seiten zu einer bestimmten Produktseite, einem Marketingkanal oder sogar Gerätetyp anzeigen möchten. Dieses Bedienfeld geht über die alte nächste/vorherige Berichterstellung hinaus, da es Ihnen ermöglicht, eine beliebige Dimension anzuzeigen und keine neue Implementierung erforderlich ist, um Einblicke zu erhalten. | 20. April 2022 |
+
+{style=&quot;table-layout:auto&quot;}
+
+### Fehlerbehebungen
+
+* Es wurde ein Konsolenfehler beim Zugriff auf Customer Journey Analytics über die Experience Cloud-Startseite behoben. (AN-281468)
 
 ## Februar 2022 {#feb2022}
 
@@ -24,7 +38,7 @@ ht-degree: 94%
 
 | Funktion | Beschreibung | Geplantes Datum |
 | ----------- | ---------- | ----- |
-| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird in Reports &amp; Analytics als _Merchandising_ bezeichnet. Es wird jetzt in Customer Journey Analytics unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
+| [!UICONTROL Persistenz]-Optionen für Binding-Dimensionen und Binding-Metriken | Beim Erstellen oder Bearbeiten einer Datenansicht können Sie die Persistenz einer Dimension an eine andere Dimension oder Metrik binden. Dieses Konzept wird als _Merchandising_ in Adobe Analytics und wird jetzt in CJA unterstützt. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#binding-dimension) und [Anwendungsfall](/help/use-cases/binding-dimensions-metrics.md) | 19. Januar 2022 |
 | Die Zuordnungsmodelle [!UICONTROL Erster bekannter] und [!UICONTROL Letzter bekannter] | Diese beiden neuen Zuordnungsmodelle nehmen den ersten oder letzten beobachteten Wert für eine Dimension innerhalb eines bestimmten Persistenzbereichs (Sitzung, Person oder benutzerspezifischer Zeitraum mit Rückblick). Anschließend wenden sie das Zuordnungsmodell auf alle Ereignisse im angegebenen Bereich an. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-settings/persistence.html?lang=de#allocation-settings) | 19. Januar 2022 |
 | [!UICONTROL PersonID] und [!UICONTROL PersonID-Namespace] als Dimensionen | Zeigt die `personID` (oder `customerID` bzw. die ID, die Sie zum Zusammenführen von Datensätzen in einer Verbindung verwenden) als Dimension in Datenansichten. Diese Verbesserung erleichtert Ihnen die Einbeziehung der `personID` als Dimension in Ihrer Datenansicht, indem Sie sie aus der Verbindung heranziehen. [Weitere Informationen](https://experienceleague.adobe.com/docs/analytics-platform/using/cja-dataviews/component-reference.html#optional-standard-components) | 19. Januar 2022 |
 
