Updated by task 'AutomatedMDTask_1652492991418_TM-MT_1652493015820'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/analytics-platform.en/commit/5f1d2e4276abf0bca1ff01b6e316b4f34ad327d3

--- a/help/release-notes/2022.md
+++ b/help/release-notes/2022.md
@@ -3,22 +3,31 @@ title: Versionshinweise zu Customer Journey Analytics für 2022 anzeigen
 description: Versionshinweise zu CJA für 2022
 feature: Release Notes
 exl-id: 61556c50-7a2b-4f08-a387-99045d31f0cf
-source-git-commit: b7a68f7cbcca74c1eaa5f14c4a3aa2652afb248d
+source-git-commit: 067d816b3e9ce6bf9cc36f270cdf050a847bbcc8
 workflow-type: tm+mt
-source-wordcount: '463'
+source-wordcount: '668'
 ht-degree: 61%
 
 ---
 
 # Versionshinweise zu Customer Journey Analytics für 2022
 
+## April 2022 {#apr22}
+
+| Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
+| ----------- | ---------- | ----- |
+| Dimension-Unterzeichenfolgen | Bietet mehrere Methoden zum Extrahieren des gewünschten Teils einer Zeichenfolge zur Verwendung als Dimensionselemente. Mit dieser Funktion können Sie eine Zeichenfolgendimension auch als Array behandeln, wenn die Zeichenfolge durch Trennzeichen getrennte Werte enthält. [Weitere Informationen](../data-views/component-settings/substring.md) | 20. April 2022 |
+| Datenvorbereitung für Analytics Source Connector | Die [Analytics Source Connector](https://experienceleague.adobe.com/docs/experience-platform/sources/ui-tutorials/create/adobe-applications/analytics.html?lang=de) ist jetzt in die [Datenvorbereitung](https://experienceleague.adobe.com/docs/experience-platform/data-prep/home.html) Funktionen von Adobe Experience Platform. Kunden von Adobe Real-time Customer Data Platform (RTCDP), CJA und Adobe Journey Optimizer (AJO) können jetzt die Analytics-Feldergruppe um zusätzliche Feldergruppen erweitern. Sie können außerdem 100+ Data Prep-Operatoren nutzen, um die Analytics-Daten während der Aufnahme in Adobe Experience Platform (AEP) anzureichern. RTCDP-Kunden können jetzt mehrere Data Prep-fähige Report Suites für Profile aktivieren.<p>CJA-Kunden, die mehrere Report Suites über Analytics Source Connector erfassen, können jetzt Spaltenunterschiede zwischen Report Suites aufheben. Wenn beispielsweise &quot;Suchbegriff&quot;in `eVar1` in einer Report Suite und in `eVar2` in einer anderen Report Suite können Sie mithilfe der Datenvorbereitung die Analytics-Feldergruppe um eine neue Spalte erweitern, in der die Werte aus den beiden eVars zusammengeführt werden. | 27. April 2022 |
+
+{style=&quot;table-layout:auto&quot;}
+
 ## März 2022 {#mar22}
 
 | Funktion | Beschreibung | [Zieldatum](/help/release-notes/releases.md) |
 | ----------- | ---------- | ----- |
-| Anmerkungen in Workspace | Mit Anmerkungen in Workspace können Sie Ihrer Organisation kontextbezogene Datennuancen und Einblicke effektiv kommunizieren. [Weitere Informationen](/help/components/annotations/overview.md) | allmähliche Einführung beginnt am 23. März 2022 |
+| Anmerkungen in Analysis Workspace | Mit Anmerkungen in Analysis Workspace können Sie Ihrer Organisation kontextbezogene Informationen und Einblicke zu Daten effektiv übermitteln. [Weitere Informationen](/help/components/annotations/overview.md) | Der schrittweise Rollout beginnt am 23. März 2022 |
 | Landingpage für neue Customer Journey Analytics | Auf der Landingpage für Customer Journey Analytics finden Sie eine Startseite des Projektmanagers und einen Lernabschnitt, der Ihnen bei den ersten Schritten hilft. [Weitere Informationen](/help/getting-started/landing.md) | 1. April 2022 |
-| [!UICONTROL Nächstes Element] oder [!UICONTROL Vorheriges Element] Arbeitsbereich | Die [!UICONTROL Nächstes oder vorheriges Element] -Bedienfeld können Sie Elemente untersuchen, die einem Dimensionselement Ihrer Wahl folgen oder diesem vorausgehen. Verwenden Sie sie beispielsweise, wenn Sie die nächsten oder vorherigen Seiten zu einer bestimmten Produktseite, einem Marketingkanal oder sogar Gerätetyp anzeigen möchten. Dieses Bedienfeld geht über die alte nächste/vorherige Berichterstellung hinaus, da es Ihnen ermöglicht, eine beliebige Dimension anzuzeigen und keine neue Implementierung erforderlich ist, um Einblicke zu erhalten. | 20. April 2022 |
+| Analysis Workspace-Bedienfeld [!UICONTROL Nächstes Element] oder [!UICONTROL Vorheriges Element] | Das Bedienfeld [!UICONTROL Nächstes oder vorheriges Element] ermöglicht es Ihnen, Elemente zu untersuchen, die einem von Ihnen ausgewählten Dimensionselement folgen oder vorausgehen. Sie können es beispielsweise verwenden, wenn Sie die nächsten oder vorherigen Seiten zu einer bestimmten Produktseite, einem Marketing-Kanal oder sogar einem Gerätetyp anzeigen möchten. Dieses Bedienfeld geht über die alte nächste/vorherige Berichterstellung hinaus, da es Ihnen ermöglicht, eine beliebige Dimension anzuzeigen, wobei keine neue Implementierung erforderlich ist, um Einblicke zu erhalten. | 20. April 2022 |
 
 {style=&quot;table-layout:auto&quot;}
 
